// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarkdownEngine basic 1`] = `
Object {
  "JSAndCssFiles": Array [],
  "html": "<h2>!<a href=\\"file:///var/folders/1l/h5rmxkhs3ldfr3y5fzkkw2v40000gn/T/tmp-81064-toXQ8d5977A3/vault1/alpha.md\\">alpha</a></h2>
<p><code>code span</code>some text</p>
",
  "markdown": "![[alpha]]
---

\`code span\`some text",
  "tocHTML": "",
  "yamlConfig": Object {},
}
`;

exports[`MarkdownEngine basic wiki link 1`] = `
Object {
  "JSAndCssFiles": Array [],
  "html": "<p><a href=\\"file:///var/folders/1l/h5rmxkhs3ldfr3y5fzkkw2v40000gn/T/tmp-81064-qDN5cjYyo4MK/vault1/foo.md\\">foo</a></p>
",
  "markdown": "[[foo]]",
  "tocHTML": "",
  "yamlConfig": Object {},
}
`;

exports[`MarkdownEngine image link 1`] = `
Object {
  "JSAndCssFiles": Array [],
  "html": "<p><img src=\\"file:///var/folders/1l/h5rmxkhs3ldfr3y5fzkkw2v40000gn/T/tmp-81064-4YzH0JL61qcv/vault1/foo.jpg\\" alt=\\"foo\\"></p>
",
  "markdown": "![foo](foo.jpg)",
  "tocHTML": "",
  "yamlConfig": Object {},
}
`;

exports[`MarkdownEngine math 1`] = `
Object {
  "JSAndCssFiles": Array [],
  "html": "<p><span style=\\"color: #ee7f49; font-weight: 500;\\">ParseError: KaTeX parse error: Unexpected character: &apos;&apos; at position 8: i hbar &#x332;rac{partial Psi&#x2026;</span></p>
",
  "markdown": "$$
i hbar rac{partial Psi}{partial t} = - rac{hbar^2}{2m} rac{partial^2 Psi}{partial x^2} + V Psi
$$",
  "tocHTML": "",
  "yamlConfig": Object {},
}
`;

exports[`MarkdownEngine rel link 1`] = `
Object {
  "JSAndCssFiles": Array [],
  "html": "<p><a href=\\"file:///var/folders/1l/h5rmxkhs3ldfr3y5fzkkw2v40000gn/T/tmp-81064-YPoRvS1Vh7An/vault1/foobar#rel-link.md\\">foobar#rel-link</a></p>
",
  "markdown": "[[foobar#rel-link]]",
  "tocHTML": "",
  "yamlConfig": Object {},
}
`;

exports[`MarkdownEngine wiki link with space 1`] = `
Object {
  "JSAndCssFiles": Array [],
  "html": "<p><a href=\\"file:///var/folders/1l/h5rmxkhs3ldfr3y5fzkkw2v40000gn/T/tmp-79257-qky0JKFbD5iD/vault1/foo_bar.md\\">foo bar</a></p>
",
  "markdown": "[[foo bar]]",
  "tocHTML": "",
  "yamlConfig": Object {},
}
`;

exports[`MarkdownEngine with header 1`] = `
Object {
  "JSAndCssFiles": Array [],
  "html": "<h2>((ref:<a href=\\"file:///Users/kevinlin/code/mume/vault1/alpha.md\\">alpha</a>#Header1))</h2>
<p><code>code span</code>some text</p>
",
  "markdown": "((ref:[[alpha]]#Header1))
---

\`code span\`some text",
  "tocHTML": "",
  "yamlConfig": Object {},
}
`;

exports[`MarkdownEngine with header offset 1`] = `
Object {
  "JSAndCssFiles": Array [],
  "html": "<h2>((ref:<a href=\\"file:///Users/kevinlin/code/mume/vault1/alpha.md\\">alpha</a>#Header1,1))</h2>
<p><code>code span</code>some text</p>
",
  "markdown": "((ref:[[alpha]]#Header1,1))
---

\`code span\`some text",
  "tocHTML": "",
  "yamlConfig": Object {},
}
`;

exports[`MarkdownEngine with wildcard 1`] = `
Object {
  "JSAndCssFiles": Array [],
  "html": "<h2>((ref:<a href=\\"file:///Users/kevinlin/code/mume/vault1/alpha.md\\">alpha</a>#Header1:#*))</h2>
<p><code>code span</code>some text</p>
",
  "markdown": "((ref:[[alpha]]#Header1:#*))
---

\`code span\`some text",
  "tocHTML": "",
  "yamlConfig": Object {},
}
`;
